Fix: 404 page vertical align

--- a/src/styles/General/404.module.scss
+++ b/src/styles/General/404.module.scss
@@ -1,8 +1,7 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    place-items: center;
+    justify-self: center;
     gap: 1.5rem;
 
     height: 100%;
