--- a/src/styles/Players/EditRoute.module.scss
+++ b/src/styles/Players/EditRoute.module.scss
@@ -1,9 +1,7 @@
 .redirecting {
-    width: 100vw;
-    height: 100vh;
-
     display: grid;
-    place-items: center;
-    
+    align-content: center;
+    flex: 1;
+
     font-size: 1.5rem;
 }
